# Praxis

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts
.cargo/: config.toml
.claude/commands/: ticket.md
.github/workflows/: ci.yml
app/: globals.css  layout.tsx  page.tsx
app/_components/: SavedGamesList.tsx
app/rules-cheatsheet/: page.tsx
apps/mobile/: app.config.ts  babel.config.js  eas.json  metro.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/web/: .gitignore  next.config.mjs  package.json  sentry.client.config.ts  sentry.edge.config.ts  tailwind.config.ts
components/board/: BillsPanel.tsx  MarketPanel.tsx  PolicyTracksRow.tsx  PoolsPanel.tsx  RoundPhaseHeader.tsx
components/classes/: CapitalistPanel.tsx  ClassPanelShell.tsx  MiddlePanel.tsx  StatePanel.tsx  StorageGrid.tsx  WorkingPanel.tsx
components/endRound/: EndRoundWizard.tsx
components/shared/: Counter.tsx  HideCurtain.tsx  Modal.tsx  PolicyTrack.tsx  StatBadge.tsx
crates/hegemony-core/: Cargo.toml
crates/hegemony-core/src/: error.rs  jni_exports.rs  lib.rs  mutations.rs  starting_state.rs  time.rs  types.rs  wasm.rs
crates/hegemony-core/src/cards/: data.rs  mod.rs
crates/hegemony-core/src/rules/: end_of_round.rs  foreign_trade.rs  game_end.rs  imf.rs  mod.rs  phases.rs  taxes.rs  vp.rs
crates/hegemony-core/tests/: proptest_tests.proptest-regressions  proptest_tests.rs
docs/: AUDIT-2026-05-09.md  AUDIT-PLAN-2026-05-09.md  README.md  SPEC-MC-COMPANION.md  SPEC-WC-COMPANION.md
(+186 files in other folders)
