[package]
name = "hegemony-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1", features = ["v4", "js"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", default-features = false }

[dev-dependencies]
proptest = "1"
